# samples

./: .editorconfig  CMakeLists.txt
.github/workflows/: build.yml
bgapp/: CMakeLists.txt  bootparam-bg.yml  bootparam.yml  main-bg.c  main.c  param-bg.sfx  param.sfx
hello-world/: CMakeLists.txt  basic.c  param.yml
incoming-dialog/: CMakeLists.txt  main-target.c  main.c  param-target.yml  param.yml
ini-file-processor/: CMakeLists.txt  main.cpp  param.sfx
notification-util/: CMakeLists.txt  main-bg.c  main.c  param-bg.sfx  param.sfx
prx-declspec/: CMakeLists.txt  app.cpp  library.cpp  library.h  param.yml
prx-emd/: CMakeLists.txt  app.c  library.c  library.emd  library.h  param.yml
right-plugin/: CMakeLists.txt  main.c  param.yml  right.gim  right.txt
shacccg/: CMakeLists.txt  main.c  param.sfx
shacccg/shader/: basic_f.cg  basic_v.cg  clear_f.cg  clear_v.cg
